<resources>
    <string name="app_name">V3 Online TV</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_forgot">Forgot password</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Applicant_Personal_Detail">Applicant Personal Detail</string>
    <string name="DOB">DOB</string>
    <string name="DOBst">DOB<font fgcolor="red"> *</font></string>
    <string name="Wedding_Date">Wedding Date</string>
    <string name="Single">Single</string>
    <string name="Married">Married</string>
    <string name="Gender">Gender</string>
    <string name="Genderst">Gender<font fgcolor="red"> *</font></string>
    <string name="Pan_No">Pan No</string>
    <string name="Mobile">Mobile<font fgcolor="red"> *</font></string>
    <string name="Namest">Name<font fgcolor="red"> *</font></string>
    <string name="Mobilest">Mobile<font fgcolor="red"> *</font></string>
    <string name="Mobilewhatsaapp">WhatsApp No.<font fgcolor="red"> *</font></string>
    <string name="lang">Language<font fgcolor="red"> *</font></string>
    <string name="utype">Type<font fgcolor="red"> *</font></string>
    <string name="In_Take_Datest">In Take Date<font fgcolor="red"> *</font></string>
    <string name="Product_Codest">Product Code<font fgcolor="red"> *</font></string>
    <string name="SponsorId">Sponsor Unique Id<font fgcolor="red"> *</font></string>
    <string name="Sponsorname">Sponsor Name<font fgcolor="red"> *</font></string>
    <string name="Upline">Upline<font fgcolor="red"> *</font></string>
    <string name="Position">Position<font fgcolor="red"> *</font></string>
    <string name="Uplineuser">Upline Username<font fgcolor="red"> *</font></string>
    <string name="Username">Username<font fgcolor="red"> *</font></string>
    <string name="Name1">Name<font fgcolor="red"> *</font></string>
    <string name="SalesName1">Sales Name<font fgcolor="red"> *</font></string>
    <string name="manpinno">Pin No<font fgcolor="red"> *</font></string>
    <string name="Pinno">Pin No</string>
    <string name="Storename">Store Name</string>
    <string name="Pintype">Pin Type</string>
    <string name="Whatsapp_Mobile_Number">Whatsapp Mobile Number</string>
    <string name="Tel">Tel</string>
    <string name="Tel_Ofz">Tel (Office)</string>
    <string name="SponsorBounus">Sponsor Bonus</string>
    <string name="PairBounus">Pair Match Bonus</string>
    <string name="PointDetails">Point Details</string>
    <string name="Email_ID">Email ID</string>
    <string name="Account_Number">Account Number<font fgcolor="red"> *</font></string>
    <string name="IFSC">IFSC<font fgcolor="red"> *</font></string>
    <string name="Last_Transaction_Date">Last Transaction Date</string>
    <string name="House_No">House No</string>
    <string name="Floor">Floor</string>
    <string name="Street_No">Street No</string>
    <string name="Street_Name">Street Name</string>
    <string name="City">City</string>
    <string name="Cityst">City<font fgcolor="red"> *</font></string>
    <string name="State">State</string>
    <string name="Statest">State<font fgcolor="red"> *</font></string>
    <string name="Pincode">Pincode</string>
    <string name="Pincodest">Pincode<font fgcolor="red"> *</font></string>
    <string name="Permise_Name">Permise Name</string>
    <string name="Area">Area</string>
    <string name="Landmark">Landmark</string>
    <string name="Company_Name">Company Name</string>
    <string name="Designation">Designation</string>
    <string name="Investment">Investment</string>
    <string name="Monthly_Income">Monthly Income</string>
    <string name="Building_No">Building No</string>
    <string name="Primary">Primary</string>
    <string name="Name">Name</string>
    <string name="Sponsor_Unique_IDst">Sponsor Unique ID<font fgcolor="red"> *</font></string>
    <string name="Sponsor_Namest">Sponsor Name<font fgcolor="red"> *</font></string>
    <string name="Uniquest">Unique<font fgcolor="red"> *</font></string>
    <string name="Sponsor_Usernamest">Sponsor Username<font fgcolor="red"> *</font></string>
    <string name="Relationship">Relationship</string>
    <string name="Relationshipst">Relationship<font fgcolor="red"> *</font></string>
    <string name="rssym">\u20B9</string>
    <string name="DOJ">Date Of Joining</string>
    <string name="Bank_Name">Bank Name <font fgcolor="red"> *</font></string>
    <string name="Branch_Name">Branch Name<font fgcolor="red"> *</font></string>
    <string name="ID_Proof_Name">ID Proof Name</string>
    <string name="ID_Proof_Number">ID Proof Number</string>
    <string name="ID_Proof_Image">ID Proof Image</string>
    <string name="User_Name">User Name</string>
    <string name="User_Namest">User Name<font fgcolor="red"> *</font></string>
    <string name="Password">Password</string>
    <string name="Passwordst">Password<font fgcolor="red"> *</font></string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Confirm_Passwordst">Confirm Password<font fgcolor="red"> *</font></string>
    <string name="Account_Type">Account Type<font fgcolor="red"> *</font></string>
    <string name="Male">Male</string>
    <string name="FeMale">Female</string>
    <string name="Status">Status</string>
    <string name="Sponsor_Name">Sponsor Name</string>
    <string name="Sponsor_FullName">Sponsor FullName</string>
    <string name="Address">Address</string>
    <string name="Addressst">Address<font fgcolor="red"> *</font></string>
    <string name="District">District</string>
    <string name="Districtst">District<font fgcolor="red"> *</font></string>
    <string name="First_Name">First Name</string>
    <string name="name">Name<font fgcolor="red"> *</font></string>
    <string name="First_Namest">First Name<font fgcolor="red"> *</font></string>
    <string name="Last_Name">Last Name</string>
    <string name="Last_Namest">Last Name<font fgcolor="red"> *</font></string>
    <string name="Mother_Name">Mother Name</string>
    <string name="Mother_Namest">Mother Name<font fgcolor="red"> *</font></string>
    <string name="Submit">Submit</string>
    <string name="Others">Others</string>
    <string name="passhint"><font color="red" size="10">min 8 characters</font></string>
    <string name="title_activity_my_portal">MyPortal</string>
    <string name="User_ID">User ID</string>
    <string name="Date_Of_Joing">Date Of Joining</string>
    <string name="IBV">IBV</string>
    <string name="GBV">GBV</string>
    <string name="Receivable_Amount">Receivable Amount</string>
    <string name="Rs">Rs.</string>
    <string name="Choose_File">Choose Image</string>
    <string name="No_File_Chosen">No File Chosen</string>
    <string name="MICR">MICR<font fgcolor="red"> *</font></string>
    <string name="Profile">Profile</string>
    <string name="MY_Portal">My Portal</string>
    <string name="My_Info">My Info</string>
    <string name="My_Bank_Details">My Bank Details</string>
    <string name="Tree">Tree</string>
    <string name="My_Direct_Team">My Direct Team</string>
    <string name="Genealogy_Tree">Genealogy Tree</string>
    <string name="IBV_Reports">IBV Reports</string>
    <string name="GBV_Reports">GBV Reports</string>
    <string name="Reports">Reports</string>
    <string name="Logout">Logout</string>
    <string name="Bonus_Reports">Bonus Reports</string>
    <string name="tds_reports">TDS Reports</string>
    <string name="Window_Reports">Window Reports</string>
    <string name="Withdraw_Reports">Withdraw Reports</string>
    <string name="My_Sponsor">My Sponsor</string>
    <string name="title_activity_home_page">Dashboard</string>
    <string name="Home">Home</string>
    <string name="golon">:</string>
    <string name="my_num">+917200232357</string>
    <string name="From_Date">From Date</string>
    <string name="Total_Reward">Total Reward</string>
    <string name="To_Date">To Date</string>
    <string name="Filter">Filter</string>
    <string name="Edit">Edit</string>
    <string name="Search">Search</string>
    <string name="Stock_List">Stock List</string>
    <string name="PinDetails">Pin Details</string>
    <string name="Overallbonus">Overall Bonus</string>
    <string name="Autowithdraw">Auto Withdraw</string>
    <string name="Sales_Point">Sales Point</string>
    <string name="Sales_Id">Sales ID</string>
    <string name="Sales_Report">Sales Report</string>
    <string name="Curpswd">Current Password<font fgcolor="red"> *</font></string>
    <string name="Newpswd">New Password<font fgcolor="red"> *</font></string>
    <string name="Confirmpswd">Confirm Password<font fgcolor="red"> *</font></string>
    <string name="pin">Your V3 Pin<font fgcolor="red"> *</font></string>
    <string name="Purchase_Report">Purchase Report</string>
    <string name="Customer_Namest">Name<font fgcolor="red"> *</font></string>
    <string name="Customer_Address">Address<font fgcolor="red"> *</font></string>
    <string name="Customer_City">City<font fgcolor="red"> *</font></string>
    <string name="Customer_pincode">Pin Code<font fgcolor="red"> *</font></string>
    <string name="Customer_Id">Customer Id<font fgcolor="red"> *</font></string>
    <string name="Categoryst">Category<font fgcolor="red"> *</font></string>
    <string name="Sub_Categoryst">Sub Category<font fgcolor="red"> *</font></string>
    <string name="Product_Namest">Product Name<font fgcolor="red"> *</font></string>
    <string name="Product_MRPst">Product MRP<font fgcolor="red"> *</font></string>
    <string name="Stock_in_Handst">Stock in Hand<font fgcolor="red"> *</font></string>
    <string name="No_of_Qtyst">No of Qty<font fgcolor="red"> *</font></string>
    <string name="Total_Amountst">Total Amount<font fgcolor="red"> *</font></string>
    <string name="Storest">Store<font fgcolor="red"> *</font></string>
    <string name="Typest">Type<font fgcolor="red"> *</font></string>
    <string name="Product_DP_Pricest">Product DP Price<font fgcolor="red"> *</font></string>
    <string name="Add_Sales">Add Sales</string>
    <string name="Add_Customer">Add Customer</string>
    <string name="Grand_Total">Grand Total</string>
    <string name="Add">Add</string>
    <string name="About_Us">About Us</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="about">We are V3 Online TV, Our Speciality is our Infrared saunas,  A 20 minute session of Infrared Sauna induces profuse sweating and detoxifies the body promoting relaxation and comfort. Besides, it also offers a number of health benefits such as boosting blood circulation, weight loss, relieves muscle and joint pains, acne, eczema, and reduces cellulites.</string>
    <string name="Vesion">Vesion 2.1.0</string>
    <string name="Rate_This_App">Rate this app</string>
    <string name="Share">Share</string>
    <string name="About">About</string>
    <string name="contact_us">Please write to us using the contact form below if you would like to know more about the opportunity, share ideas, give feedback, have complaints, or would simply like to request a catalogue</string>
    <string name="Address1">No.18, G.S.T.Road,Nethaji Nagar,</string>
    <string name="Address2">Puliyankulam Bus Stop,Madurai-625006.</string>
    <string name="Phone_dot">Phone :</string>
    <string name="ph_num">+91 7708825000</string>
    <string name="Email_dot">Email :</string>
    <string name="mail">v3onlinetvhelp@gmail.com</string>
    <string name="More">More</string>
    <string name="Feedback">Feedback</string>
    <string name="Invite_Friends">Invite Friends</string>
    <string name="Contact">Contact</string>
    <string name="AutoFilling">Auto Filling</string>
    <string name="Binary">Binary</string>
    <string name="BonusReports">Bonus Reports</string>
</resources>