<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.elancier.healthzone.ContactUs">

    <!-- <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:background="@drawable/menu_bar_bg"
        android:orientation="horizontal">




            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:id="@+id/back"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/back_arrow" />


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/About"
                android:textColor="#FFF"
                android:textSize="20sp" />



        <!-- <ImageView
             android:id="@+id/pencil"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="8dp"
             android:padding="8dp"
             android:src="@drawable/pencil" />-->

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Contact"
                android:gravity="center"
                android:textColor="#222"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/contact_us"
                android:textColor="#555"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:gravity="center"
                android:textColor="#222"
                android:textSize="16sp"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Address1"
                android:textColor="#555"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/Address2"
                android:textColor="#555"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Phone_dot"
                    android:layout_gravity="center"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/phone_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ph_num"
                        android:textColor="#555"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="120dp"
                        android:layout_height="1dp"
                        android:background="#555" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email_dot"
                    android:layout_gravity="center"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/email_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mail"
                        android:textColor="#555"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="162dp"
                        android:layout_height="1dp"
                        android:background="#555" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <!-- <LinearLayout
         android:id="@+id/drawer_layout"
         android:layout_width="260dp"
         android:layout_height="match_parent"
         android:layout_gravity="start">

         <include layout="@layout/drawer_layout" />

     </LinearLayout>

 </android.support.v4.widget.DrawerLayout>
-->
</LinearLayout>
