<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:padding="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/First_Name"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_stroke_bg"
            android:padding="7dp"
            android:singleLine="true"
            android:textColor="#333"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Last_Name"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_stroke_bg"
            android:padding="7dp"
            android:singleLine="true"
            android:textColor="#333"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/mname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Mother_Name"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_stroke_bg"
            android:padding="7dp"
            android:singleLine="true"
            android:textColor="#333"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/sponcer_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Sponsor_Name"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/sponcer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_stroke_bg"
            android:padding="7dp"
            android:singleLine="true"
            android:textColor="#333"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/sponcer_fname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Sponsor_FullName"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/sponcer_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="false"
            android:background="@drawable/grey_bg1"
            android:padding="7dp"
            android:singleLine="true"
            android:textColor="#555"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mobile"
                    android:textColor="@color/text_color"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/moblay"
                    android:background="@drawable/grey_stroke_bg"
                    android:orientation="horizontal"
                    android:padding="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+91"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="#333"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                android:textColor="#555"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/radiogrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Male"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:theme="@style/MyCheckBox" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FeMale"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:theme="@style/MyCheckBox" />

                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Others"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:theme="@style/MyCheckBox" />

            </RadioGroup>

            <TextView
                android:id="@+id/gender_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please Select Gender"
                android:textColor="#FF00"
                android:textSize="12sp"
                android:visibility="gone"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DOB"
                android:textColor="@color/text_color"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/grey_stroke_bg"
                android:focusable="false"
                android:padding="7dp"
                android:textColor="#333"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>