<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#ffffff">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/Curpswd"
            android:textColor="@color/text2"
            android:textSize="12sp" />

    <EditText
        android:id="@+id/curpswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/grey_stroke_bg"
        android:padding="7dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#333"
        android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Newpswd"
            android:textColor="@color/text2"
            android:textSize="12sp" />

    <EditText
        android:id="@+id/newpswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/grey_stroke_bg"
        android:padding="7dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#333"
        android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Confirmpswd"
            android:textColor="@color/text2"
            android:textSize="12sp" />

    <EditText
        android:id="@+id/cnfrmpswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/grey_stroke_bg"
        android:padding="7dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#333"
        android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pin"
            android:textColor="@color/text2"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_stroke_bg"
            android:padding="7dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#333"
            android:textSize="14sp" />

    <TextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/theme_solid_back"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/Submit"
        android:textColor="#FFFF"
        android:textSize="16sp"
        android:textStyle="bold" />
    </LinearLayout>
    </ScrollView>

</LinearLayout>